Sync all content

--- a/content/resources/11-304js09-th.md
+++ b/content/resources/11-304js09-th.md
@@ -6,6 +6,8 @@ description: "Tama New Town is one of many new towns\u2014planned residential co
 file: /courses/11-304j-site-and-infrastructure-systems-planning-spring-2009/0dd3e664b6d8d7de1ec85839c2b16b7d_11-304js09-th.jpg
 file_size: 14149
 file_type: image/jpeg
+hide_download: true
+hide_download_original: null
 image_metadata:
   caption: "Tama New Town is one of many new towns\u2014planned residential communities,\
     \ many of which are currently experiencing changes for the worse\u2014built outside\
