--- a/content/resources/11-304js09.md
+++ b/content/resources/11-304js09.md
@@ -6,6 +6,8 @@ description: "Tama New Town is one of many new towns\u2014planned residential co
 file: /courses/11-304j-site-and-infrastructure-systems-planning-spring-2009/c264508cfe130ba1022fb7c22148144a_11-304js09.jpg
 file_size: 175300
 file_type: image/jpeg
+hide_download: true
+hide_download_original: null
 image_metadata:
   caption: "Tama New Town is one of many new towns\u2014planned residential communities,\
     \ many of which are currently experiencing changes for the worse\u2014built outside\
